Colab을 통해 생성됨

--- a/python3_basic_w3school.ipynb
+++ b/python3_basic_w3school.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMFIvqFvN2rjL9XdfmSQMRa",
+      "authorship_tag": "ABX9TyNUKhtQxWEh6P/slHk5U+8/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -866,11 +866,11 @@
         "#공백 삭제해줌"
       ],
       "metadata": {
-        "id": "rXdhpO3DQESY",
-        "outputId": "4ba97e01-794e-4510-ca01-323cd82b85ec",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rXdhpO3DQESY",
+        "outputId": "4ba97e01-794e-4510-ca01-323cd82b85ec"
       },
       "execution_count": 27,
       "outputs": [
@@ -891,11 +891,11 @@
         "# H를 J로 대체"
       ],
       "metadata": {
-        "id": "s4y700bIQK6B",
-        "outputId": "972d4223-6046-4bf0-a3a3-5d4c28b42354",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "s4y700bIQK6B",
+        "outputId": "972d4223-6046-4bf0-a3a3-5d4c28b42354"
       },
       "execution_count": 28,
       "outputs": [
@@ -916,11 +916,11 @@
         "#한 변수에 큰 따옴표로 선언해도 작은 따옴표로 나뉘어져서 출력"
       ],
       "metadata": {
-        "id": "aJ_FVAFRQYn9",
-        "outputId": "5e4f6870-a068-49b1-99e4-c996b08b9f20",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aJ_FVAFRQYn9",
+        "outputId": "5e4f6870-a068-49b1-99e4-c996b08b9f20"
       },
       "execution_count": 29,
       "outputs": [
@@ -942,11 +942,11 @@
         "print(c)"
       ],
       "metadata": {
-        "id": "yqnAm7-LQkc-",
-        "outputId": "65e1c561-06c6-48e4-ba71-0afbf605c570",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yqnAm7-LQkc-",
+        "outputId": "65e1c561-06c6-48e4-ba71-0afbf605c570"
       },
       "execution_count": 30,
       "outputs": [
@@ -968,11 +968,11 @@
         "print(c)"
       ],
       "metadata": {
-        "id": "BbqmD-wNQ63H",
-        "outputId": "8d2596ca-b95d-462f-8ae6-b121ed357b55",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "BbqmD-wNQ63H",
+        "outputId": "8d2596ca-b95d-462f-8ae6-b121ed357b55"
       },
       "execution_count": 31,
       "outputs": [
@@ -993,11 +993,11 @@
         "print(txt)"
       ],
       "metadata": {
-        "id": "WMUoqVGnRHc1",
-        "outputId": "fb966119-8a2c-448e-8318-aa883545a47d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WMUoqVGnRHc1",
+        "outputId": "fb966119-8a2c-448e-8318-aa883545a47d"
       },
       "execution_count": 32,
       "outputs": [
@@ -1018,11 +1018,11 @@
         "print(txt)"
       ],
       "metadata": {
-        "id": "qCXG5_QkRNAd",
-        "outputId": "c922b453-9481-4fcb-f3c6-fadacfb0b4a9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qCXG5_QkRNAd",
+        "outputId": "c922b453-9481-4fcb-f3c6-fadacfb0b4a9"
       },
       "execution_count": 33,
       "outputs": [
@@ -1043,11 +1043,11 @@
         "print(txt)"
       ],
       "metadata": {
-        "id": "xmDL6JtfRRIt",
-        "outputId": "7f1dd85e-3790-4540-b089-75d6c29cda1d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xmDL6JtfRRIt",
+        "outputId": "7f1dd85e-3790-4540-b089-75d6c29cda1d"
       },
       "execution_count": 34,
       "outputs": [
@@ -1067,11 +1067,11 @@
         "print(txt)"
       ],
       "metadata": {
-        "id": "NSOM8FweRVDt",
-        "outputId": "44f81a8b-021f-48ca-8f91-ebb54f5a5b66",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NSOM8FweRVDt",
+        "outputId": "44f81a8b-021f-48ca-8f91-ebb54f5a5b66"
       },
       "execution_count": 35,
       "outputs": [
@@ -1156,12 +1156,12 @@
       ],
       "metadata": {
         "collapsed": true,
-        "id": "yYa70HDqRrLe",
-        "outputId": "d76c620b-0a9b-49cd-d544-7b7ca416af3b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 106
-        }
+        },
+        "id": "yYa70HDqRrLe",
+        "outputId": "d76c620b-0a9b-49cd-d544-7b7ca416af3b"
       },
       "execution_count": 37,
       "outputs": [
@@ -1177,9 +1177,312 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(10 > 9)\n",
+        "print(10 == 9)\n",
+        "print(10 < 9)"
+      ],
       "metadata": {
-        "id": "8Nlcg3fsR0RW"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8Nlcg3fsR0RW",
+        "outputId": "40229fe9-6b2a-4f7b-d338-0b7a99437760"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "False\n",
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 200\n",
+        "b = 33\n",
+        "\n",
+        "if b > a:\n",
+        "  print(\"b is greater than a\")\n",
+        "else:\n",
+        "  print(\"b is not greater than a\")"
+      ],
+      "metadata": {
+        "id": "yArdMo-tSCll",
+        "outputId": "6d61e517-b2c7-4a03-f2cf-554e5170b2ea",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "b is not greater than a\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(bool(\"Hello\"))\n",
+        "print(bool(15))"
+      ],
+      "metadata": {
+        "id": "rBydFiDVSEZG",
+        "outputId": "ee207aae-3d99-41c4-cb96-4c7085508a30",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = \"Hello\"\n",
+        "y = 15\n",
+        "\n",
+        "print(bool(x))\n",
+        "print(bool(y))"
+      ],
+      "metadata": {
+        "id": "hXoffYk5SH79",
+        "outputId": "32543da3-51cb-42bd-d6d5-b55a9da43b38",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bool(False)\n",
+        "bool(None)\n",
+        "bool(0)\n",
+        "bool(\"\")\n",
+        "bool(())\n",
+        "bool([])\n",
+        "bool({})"
+      ],
+      "metadata": {
+        "id": "sp_MDjU8SSM1",
+        "outputId": "4b770aaa-b98a-48c9-f080-4c5f3634cd04",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class myclass():\n",
+        "  def __len__(self):\n",
+        "    return 0\n",
+        "\n",
+        "myobj = myclass()\n",
+        "print(bool(myobj))\n"
+      ],
+      "metadata": {
+        "id": "Yc4R8NmnScJH",
+        "outputId": "c709ce81-4790-491e-a8f0-e696ebd55232",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def myFunction() :\n",
+        "  return True\n",
+        "\n",
+        "print(myFunction())"
+      ],
+      "metadata": {
+        "id": "RtqdJQOOSwCG",
+        "outputId": "9135e32c-cb05-4867-d78f-0b919b784034",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def myFunction() :\n",
+        "  return True\n",
+        "\n",
+        "if myFunction():\n",
+        "  print(\"YES!\")\n",
+        "else:\n",
+        "  print(\"NO!\")"
+      ],
+      "metadata": {
+        "id": "on_k9MIJS1Il",
+        "outputId": "4ca85a66-99bd-4313-cf0c-eea6202128d6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "YES!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 200\n",
+        "print(isinstance(x, float))"
+      ],
+      "metadata": {
+        "id": "GLw6AwIdTj_F",
+        "outputId": "4c393280-8bd9-4d1c-e68f-fc70a6df97cc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "+\tAddition\tx + y\n",
+        "-\tSubtraction\tx - y\n",
+        "*\tMultiplication\tx * y\n",
+        "/\tDivision\tx / y\n",
+        "%\tModulus\tx % y\n",
+        "**\tExponentiation\tx ** y\n",
+        "//\tFloor division\tx // y\n",
+        "=\tx = 5\tx = 5\n",
+        "+=\tx += 3\tx = x + 3\n",
+        "-=\tx -= 3\tx = x - 3\n",
+        "*=\tx *= 3\tx = x * 3\n",
+        "/=\tx /= 3\tx = x / 3\n",
+        "%=\tx %= 3\tx = x % 3\n",
+        "//=\tx //= 3\tx = x // 3\n",
+        "**=\tx **= 3\tx = x ** 3\n",
+        "&=\tx &= 3\tx = x & 3\n",
+        "|=\tx |= 3\tx = x | 3\n",
+        "^=\tx ^= 3\tx = x ^ 3\n",
+        ">>=\tx >>= 3\tx = x >> 3\n",
+        "<<=\tx <<= 3\tx = x << 3\n",
+        ":=\tprint(x := 3)\tx = 3\n",
+        "print(x)\n",
+        "==\tEqual\tx == y\n",
+        "!=\tNot equal\tx != y\n",
+        ">\tGreater than\tx > y\n",
+        "<\tLess than\tx < y\n",
+        ">=\tGreater than or equal to\tx >= y\n",
+        "<=\tLess than or equal to\tx <= y\n",
+        "and \tReturns True if both statements are true\tx < 5 and  x < 10\n",
+        "or\tReturns True if one of the statements is true\tx < 5 or x < 4\n",
+        "not\tReverse the result, returns False if the result is true\tnot(x < 5 and x < 10)\n",
+        "is \tReturns True if both variables are the same object\tx is y\n",
+        "is not\tReturns True if both variables are not the same object\tx is not y\n",
+        "in \tReturns True if a sequence with the specified value is present in the object\tx in y\n",
+        "not in\tReturns True if a sequence with the specified value is not present in the object\tx not in y\n",
+        "& \tAND\tSets each bit to 1 if both bits are 1\tx & y\n",
+        "|\tOR\tSets each bit to 1 if one of two bits is 1\tx | y\n",
+        "^\tXOR\tSets each bit to 1 if only one of two bits is 1\tx ^ y\n",
+        "~\tNOT\tInverts all the bits\t~x\n",
+        "<<\tZero fill left shift\tShift left by pushing zeros in from the right and let the leftmost bits fall off\tx << 2\n",
+        ">>\tSigned right shift\tShift right by pushing copies of the leftmost bit in from the left, and let the rightmost bits fall off\tx >> 2\n",
+        "()\tParentheses\n",
+        "**\tExponentiation\n",
+        "+x  -x  ~x\tUnary plus, unary minus, and bitwise NOT\n",
+        "*  /  //  %\tMultiplication, division, floor division, and modulus\n",
+        "+  -\tAddition and subtraction\n",
+        "<<  >>\tBitwise left and right shifts\n",
+        "&\tBitwise AND\n",
+        "^\tBitwise XOR\n",
+        "|\tBitwise OR\n",
+        "==  !=  >  >=  <  <=  is  is not  in  not in \tComparisons, identity, and membership operators\n",
+        "not\tLogical NOT\n",
+        "and\tAND\n",
+        "or\tOR"
+      ],
+      "metadata": {
+        "id": "2tVeCG7RTqLG"
       },
       "execution_count": null,
       "outputs": []
