Colab을 통해 생성됨

--- a/python3_basic_w3school.ipynb
+++ b/python3_basic_w3school.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNUKhtQxWEh6P/slHk5U+8/",
+      "authorship_tag": "ABX9TyNhOKV6iEMf0lODtZ9QnMGR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -447,7 +447,7 @@
         },
         "outputId": "81ea117b-98dc-4b7a-d94c-6ad8015fe0fe"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -500,7 +500,7 @@
         "id": "DRPDW_cMMWR-",
         "outputId": "bef25d29-8c9a-4839-9216-c5cbeb194373"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -544,7 +544,7 @@
         "id": "Jal-BCtXMrL0",
         "outputId": "bf8b537c-30ad-4cbb-b6ef-2f4dd51b77e8"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -574,7 +574,7 @@
         "id": "Fabk0KTQM5sR",
         "outputId": "4b61b998-163b-4502-92ea-cda323343559"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -599,7 +599,7 @@
         "id": "ECoQm8clOKD9",
         "outputId": "7ad85842-fe04-4ed8-d311-7a41ad69c795"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -624,7 +624,7 @@
         "id": "CvtKYZDAOWld",
         "outputId": "d2979ad8-10f0-44ad-eba0-f25d30e1977e"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -649,7 +649,7 @@
         "id": "XH4c9xjkOl72",
         "outputId": "63d563df-e8c5-472f-ffea-a96f097fcd35"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -674,7 +674,7 @@
         "id": "8dddWKzKO1be",
         "outputId": "499e5a43-8fe1-4732-c1c9-bb77f6333e05"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -699,7 +699,7 @@
         "id": "IHr6zAAPPBEN",
         "outputId": "5dd70af2-eeed-439c-ed14-067abb7773e4"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -725,7 +725,7 @@
         "id": "5AFIPu9kPaON",
         "outputId": "66d0712a-7963-4d0d-8f77-115de3a5f055"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -749,7 +749,7 @@
         "id": "RYo8c4yPPgn9",
         "outputId": "332fa2e6-211d-4403-9367-a342c841ef88"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -773,7 +773,7 @@
         "id": "YK2bDd3XPmSl",
         "outputId": "7be303d5-eda1-44ea-fc24-cf42e45b1b90"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -797,7 +797,7 @@
         "id": "htt9W0w6Pplc",
         "outputId": "01d13d88-8394-4fb8-d041-ca0deea4807b"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -822,7 +822,7 @@
         "id": "mjmQ6t6-Pw6u",
         "outputId": "cc552f01-738c-427e-fc1b-a10f1ce7f31b"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -847,7 +847,7 @@
         "id": "_e3CivsjPzR1",
         "outputId": "76388b08-029b-42cb-c896-abc9087972a5"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -872,7 +872,7 @@
         "id": "rXdhpO3DQESY",
         "outputId": "4ba97e01-794e-4510-ca01-323cd82b85ec"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -897,7 +897,7 @@
         "id": "s4y700bIQK6B",
         "outputId": "972d4223-6046-4bf0-a3a3-5d4c28b42354"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -922,7 +922,7 @@
         "id": "aJ_FVAFRQYn9",
         "outputId": "5e4f6870-a068-49b1-99e4-c996b08b9f20"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -948,7 +948,7 @@
         "id": "yqnAm7-LQkc-",
         "outputId": "65e1c561-06c6-48e4-ba71-0afbf605c570"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -974,7 +974,7 @@
         "id": "BbqmD-wNQ63H",
         "outputId": "8d2596ca-b95d-462f-8ae6-b121ed357b55"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -999,7 +999,7 @@
         "id": "WMUoqVGnRHc1",
         "outputId": "fb966119-8a2c-448e-8318-aa883545a47d"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1024,7 +1024,7 @@
         "id": "qCXG5_QkRNAd",
         "outputId": "c922b453-9481-4fcb-f3c6-fadacfb0b4a9"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1049,7 +1049,7 @@
         "id": "xmDL6JtfRRIt",
         "outputId": "7f1dd85e-3790-4540-b089-75d6c29cda1d"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1073,7 +1073,7 @@
         "id": "NSOM8FweRVDt",
         "outputId": "44f81a8b-021f-48ca-8f91-ebb54f5a5b66"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1101,7 +1101,7 @@
       "metadata": {
         "id": "cKJpyS_yRXsl"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1163,7 +1163,7 @@
         "id": "yYa70HDqRrLe",
         "outputId": "d76c620b-0a9b-49cd-d544-7b7ca416af3b"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1189,7 +1189,7 @@
         "id": "8Nlcg3fsR0RW",
         "outputId": "40229fe9-6b2a-4f7b-d338-0b7a99437760"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1220,7 +1220,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1244,7 +1244,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1272,7 +1272,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1302,7 +1302,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1333,7 +1333,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1359,7 +1359,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1388,7 +1388,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1412,7 +1412,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1486,6 +1486,75 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "append()\tAdds an element at the end of the list\n",
+        "clear()\tRemoves all the elements from the list\n",
+        "copy()\tReturns a copy of the list\n",
+        "count()\tReturns the number of elements with the specified value\n",
+        "extend()\tAdd the elements of a list (or any iterable), to the end of the current list\n",
+        "index()\tReturns the index of the first element with the specified value\n",
+        "insert()\tAdds an element at the specified position\n",
+        "pop()\tRemoves the element at the specified position\n",
+        "remove()\tRemoves the item with the specified value\n",
+        "reverse()\tReverses the order of the list\n",
+        "sort()\tSorts the list\n"
+      ],
+      "metadata": {
+        "id": "O0XWlvvrYuK-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "thistuple = (\"apple\", \"banana\", \"cherry\")\n",
+        "print(thistuple)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OGSPyD1VYzpe",
+        "outputId": "0e134bcb-5522-49f0-dbd7-2dd7091d8278"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('apple', 'banana', 'cherry')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "thistuple = (\"apple\", \"banana\", \"cherry\")\n",
+        "print(len(thistuple))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f_skMSl9Y7lF",
+        "outputId": "871188d0-5e96-48df-d806-f5f907060986"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
+          ]
+        }
+      ]
     }
   ]
 }
