Colab을 통해 생성됨

--- a/python3_basic_w3school.ipynb
+++ b/python3_basic_w3school.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNhOKV6iEMf0lODtZ9QnMGR",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyOZXsJDTlBIi+GpyNMKLdzh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -1555,6 +1557,404 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = (\"apple\", \"banana\", \"cherry\")\n",
+        "y = list(x)\n",
+        "y[1] = \"kiwi\"\n",
+        "x = tuple(y)\n",
+        "\n",
+        "print(x)"
+      ],
+      "metadata": {
+        "id": "ea4SeNXHZYcG",
+        "outputId": "e9f3c72f-20ae-4492-a380-40baabae0919",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('apple', 'kiwi', 'cherry')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "좋아요! 초보자도 이해할 수 있도록 \\*\\*튜플(Tuple)\\*\\*을 간단하게 설명해드릴게요.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "````markdown\n",
+        "# 📦 Tuple (튜플)\n",
+        "\n",
+        "**튜플(Tuple)**은 Python에서 **여러 값을 하나로 묶을 수 있는 자료형**입니다.  \n",
+        "**리스트와 비슷하지만, 수정이 불가능(immutable)**하다는 특징이 있어요.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## ✅ 튜플 만들기\n",
+        "\n",
+        "```python\n",
+        "# 소괄호 () 를 사용해서 생성\n",
+        "t1 = (1, 2, 3)\n",
+        "t2 = (\"apple\", \"banana\", \"cherry\")\n",
+        "````\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 🆚 튜플 vs 리스트\n",
+        "\n",
+        "| 구분 | 리스트 (`list`) | 튜플 (`tuple`)    |\n",
+        "| -- | ------------ | --------------- |\n",
+        "| 기호 | `[]` 대괄호     | `()` 소괄호        |\n",
+        "| 수정 | 가능 (mutable) | 불가능 (immutable) |\n",
+        "| 속도 | 느림           | 빠름              |\n",
+        "| 용도 | 자주 바뀌는 데이터   | 고정된 데이터         |\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 📌 튜플 사용 예시\n",
+        "\n",
+        "```python\n",
+        "person = (\"윤은식\", 25, \"개발자\")\n",
+        "\n",
+        "print(person[0])  # 윤은식\n",
+        "print(person[1])  # 25\n",
+        "```\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 🔒 튜플은 변경 불가\n",
+        "\n",
+        "```python\n",
+        "t = (1, 2, 3)\n",
+        "t[0] = 100  # ❌ 오류 발생! 튜플은 수정할 수 없음\n",
+        "```\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 🧰 튜플 관련 함수\n",
+        "\n",
+        "```python\n",
+        "t = (1, 2, 3, 2)\n",
+        "\n",
+        "len(t)       # 4 (길이)\n",
+        "t.count(2)   # 2 (2가 몇 번 나오는지)\n",
+        "t.index(3)   # 2 (3이 있는 인덱스)\n",
+        "```\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 💡 언제 튜플을 쓸까?\n",
+        "\n",
+        "* 데이터가 **변하지 않아야 할 때**\n",
+        "* **속도가 중요한 경우**\n",
+        "* 예: (x, y) 좌표, RGB 색상, DB 결과 등\n",
+        "\n",
+        "---\n",
+        "\n",
+        "````\n",
+        "\n",
+        "### 예시 요약\n",
+        "\n",
+        "```python\n",
+        "location = (37.55, 126.98)  # 위도, 경도 (튜플 사용 예시)\n",
+        "````\n",
+        "\n",
+        "---\n",
+        "\n",
+        "필요하면 `list`, `set`, `dictionary`도 비슷한 형식으로 알려드릴게요.\n",
+        "다음은 뭘 배우고 싶으신가요? 😄\n"
+      ],
+      "metadata": {
+        "id": "gna8XcbnZzOA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#count()\tReturns the number of times a specified value occurs in a tuple\n",
+        "#index()\tSearches the tuple for a specified value and returns the position of where it was found\n",
+        "#"
+      ],
+      "metadata": {
+        "id": "t6DTJIMbZ0TO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "jYnA8RSpaI-d"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "좋아요! 이번엔 **`set` (집합)** 에 대해 간단하고 깔끔하게 정리해드릴게요. 초보자가 이해하기 쉬운 예제와 함께 마크다운 형식으로 제공해요. `SET.md` 파일이나 `README.md`에 넣기 좋습니다.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "````markdown\n",
+        "# 🧮 Set (집합)\n",
+        "\n",
+        "**`set`**은 Python에서 **중복을 허용하지 않고**, **순서가 없는 데이터 집합**입니다.  \n",
+        "수학에서 말하는 집합과 비슷하게 동작합니다.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## ✅ Set 만들기\n",
+        "\n",
+        "```python\n",
+        "s = {1, 2, 3}\n",
+        "print(s)  # {1, 2, 3}\n",
+        "````\n",
+        "\n",
+        "⚠️ 중복된 값을 넣으면 자동으로 제거됩니다.\n",
+        "\n",
+        "```python\n",
+        "s = {1, 2, 2, 3, 3}\n",
+        "print(s)  # {1, 2, 3}\n",
+        "```\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 📌 특징\n",
+        "\n",
+        "| 특징      | 설명                 |\n",
+        "| ------- | ------------------ |\n",
+        "| 중복 ❌    | 같은 값을 여러 번 저장하지 않음 |\n",
+        "| 순서 없음 ❌ | 인덱싱(위치 접근) 불가능     |\n",
+        "| 변경 가능 ✅ | 값을 추가하거나 제거할 수 있음  |\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 🔧 주요 메서드\n",
+        "\n",
+        "```python\n",
+        "s = {1, 2, 3}\n",
+        "\n",
+        "s.add(4)      # 값 추가 → {1, 2, 3, 4}\n",
+        "s.remove(2)   # 값 제거 → {1, 3, 4}\n",
+        "s.clear()     # 모두 제거 → set()\n",
+        "```\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 🔁 집합 연산\n",
+        "\n",
+        "```python\n",
+        "a = {1, 2, 3}\n",
+        "b = {3, 4, 5}\n",
+        "\n",
+        "a | b   # 합집합 → {1, 2, 3, 4, 5}\n",
+        "a & b   # 교집합 → {3}\n",
+        "a - b   # 차집합 → {1, 2}\n",
+        "a ^ b   # 대칭차집합 → {1, 2, 4, 5}\n",
+        "```\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## ❌ 인덱싱 안 됨\n",
+        "\n",
+        "```python\n",
+        "s = {10, 20, 30}\n",
+        "print(s[0])  # 오류! set은 순서가 없음\n",
+        "```\n",
+        "\n",
+        "**→ 리스트로 변환 후 사용 가능**\n",
+        "\n",
+        "```python\n",
+        "lst = list(s)\n",
+        "print(lst[0])  # 가능\n",
+        "```\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 💡 언제 사용하나요?\n",
+        "\n",
+        "* 중복 제거가 필요할 때\n",
+        "* 빠른 검색이 필요할 때 (`in` 연산 빠름)\n",
+        "* 수학적 집합 연산이 필요할 때\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 🧠 예제\n",
+        "\n",
+        "```python\n",
+        "words = [\"apple\", \"banana\", \"apple\", \"orange\", \"banana\"]\n",
+        "unique_words = set(words)\n",
+        "print(unique_words)  # {'apple', 'banana', 'orange'}\n",
+        "```\n",
+        "\n",
+        "---\n",
+        "\n",
+        "```\n",
+        "\n",
+        "---\n",
+        "\n",
+        "다음으로 `dictionary`, `list`, `for loop`, `class` 등도 원하시면 계속 도와드릴게요!  \n",
+        "어떤 걸 더 배우고 싶으신가요? 😄\n",
+        "```\n"
+      ],
+      "metadata": {
+        "id": "p3K8_iKUahLF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "pW3tnOwvah92"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "좋아요! 초보자를 위한 **Python Dictionary(딕셔너리)** 개념을 아주 쉽게 정리해드릴게요. 마크다운으로 제공하니 `DICTIONARY.md` 같은 파일이나 `README.md`에 그대로 넣어도 됩니다.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "````markdown\n",
+        "# 📚 Python Dictionary (딕셔너리)\n",
+        "\n",
+        "**Dictionary(딕셔너리)** 는 `키(key)`와 `값(value)` 쌍으로 데이터를 저장하는 자료형입니다.  \n",
+        "전화번호부나 주소록처럼 **이름 → 전화번호** 식으로 대응하는 데이터를 표현할 때 사용합니다.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## ✅ 딕셔너리 만들기\n",
+        "\n",
+        "```python\n",
+        "person = {\n",
+        "    \"name\": \"윤은식\",\n",
+        "    \"age\": 25,\n",
+        "    \"job\": \"developer\"\n",
+        "}\n",
+        "````\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 🔍 값 접근하기\n",
+        "\n",
+        "```python\n",
+        "print(person[\"name\"])   # 윤은식\n",
+        "print(person[\"age\"])    # 25\n",
+        "```\n",
+        "\n",
+        "❗ 존재하지 않는 키를 접근하면 오류가 납니다.\n",
+        "→ `get()`을 사용하면 기본값 설정 가능\n",
+        "\n",
+        "```python\n",
+        "print(person.get(\"hobby\", \"없음\"))  # 없음\n",
+        "```\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 🛠️ 값 수정 & 추가\n",
+        "\n",
+        "```python\n",
+        "person[\"age\"] = 26              # 값 수정\n",
+        "person[\"hobby\"] = \"coding\"      # 새로운 키 추가\n",
+        "```\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## ❌ 키 삭제\n",
+        "\n",
+        "```python\n",
+        "del person[\"job\"]         # 특정 키 삭제\n",
+        "person.pop(\"age\")         # pop으로 삭제\n",
+        "person.clear()            # 모든 항목 제거\n",
+        "```\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 🔁 반복하기\n",
+        "\n",
+        "```python\n",
+        "for key in person:\n",
+        "    print(key, person[key])\n",
+        "\n",
+        "# 또는\n",
+        "for key, value in person.items():\n",
+        "    print(f\"{key} → {value}\")\n",
+        "```\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 📌 딕셔너리 메서드\n",
+        "\n",
+        "| 메서드             | 설명              |\n",
+        "| --------------- | --------------- |\n",
+        "| `dict.keys()`   | 모든 키 반환         |\n",
+        "| `dict.values()` | 모든 값 반환         |\n",
+        "| `dict.items()`  | (키, 값) 쌍 반환     |\n",
+        "| `dict.get()`    | 키에 대한 값 가져오기    |\n",
+        "| `dict.update()` | 여러 값 한 번에 수정/추가 |\n",
+        "| `dict.pop()`    | 특정 키 삭제 및 값 반환  |\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 🧠 예제\n",
+        "\n",
+        "```python\n",
+        "student = {\n",
+        "    \"id\": 1234,\n",
+        "    \"name\": \"홍길동\",\n",
+        "    \"grade\": \"A\"\n",
+        "}\n",
+        "\n",
+        "# 키 목록 보기\n",
+        "print(student.keys())  # dict_keys(['id', 'name', 'grade'])\n",
+        "\n",
+        "# 값 목록 보기\n",
+        "print(student.values())  # dict_values([1234, '홍길동', 'A'])\n",
+        "```\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 💡 언제 사용하나요?\n",
+        "\n",
+        "* 데이터에 이름을 붙여 저장할 때\n",
+        "* JSON, API 응답 데이터 처리\n",
+        "* 빠르게 값에 접근하고 싶을 때\n",
+        "\n",
+        "---\n",
+        "\n",
+        "```\n",
+        "\n",
+        "---\n",
+        "\n",
+        "원하시면 `list`, `tuple`, `set`, `if문`, `for문`, `class`도 비슷하게 정리해드릴 수 있어요!  \n",
+        "다음은 무엇을 배우고 싶으신가요? 😊\n",
+        "```\n"
+      ],
+      "metadata": {
+        "id": "aPnLeXhzasXv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "IDssN85OatIm"
+      }
     }
   ]
 }
